<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/s_6">

    <TextView
        style="@style/IntroduceContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/s_12"
        android:text="@string/manager_notifications" />

    <com.client.tok.widget.ItemInfoView
        android:id="@+id/id_set_new_msg_iiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_6"
        fc:promptId="@string/new_msg_alerts"
        fc:rightIconVisible="0"
        fc:tbVisible="1" />

    <View
        style="@style/ItemDividerLine"
        android:layout_marginStart="@dimen/s_14" />

    <com.client.tok.widget.ItemInfoView
        android:id="@+id/id_set_friend_req_iiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fc:promptId="@string/new_friend_req_alerts"
        fc:rightIconVisible="0"
        fc:tbVisible="1" />

    <com.client.tok.widget.ItemInfoView
        android:id="@+id/id_set_center_iiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_12"
        fc:detail="@string/notification_center_detail"
        fc:promptId="@string/notification_center"
        fc:rightIconVisible="0"
        fc:tbVisible="1" />


</LinearLayout>