<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_12"
        android:background="@color/white_absolute"
        android:orientation="vertical"
        android:paddingStart="@dimen/s_16"
        android:paddingTop="@dimen/s_12"
        android:paddingEnd="@dimen/s_10"
        android:paddingBottom="@dimen/s_20">

        <TextView
            style="@style/ContentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_send_offline_msg"
            android:textStyle="bold" />

        <TextView
            style="@style/ContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_10"
            android:lineSpacingExtra="@dimen/s_5"
            android:text="@string/how_to_send_offline_msg_content" />

        <TextView
            style="@style/ContentWarningTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_20"
            android:text="@string/warning"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            style="@style/ContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_10"
            android:lineSpacingExtra="@dimen/s_5"
            android:text="@string/offline_bot_warning" />

        <TextView
            style="@style/ContentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_20"
            android:text="@string/more_about_offline_bot"
            android:textStyle="bold" />

        <TextView
            style="@style/ContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_10"
            android:lineSpacingExtra="@dimen/s_5"
            android:text="@string/more_about_offline_bot_123" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/offline_process" />

        <TextView
            style="@style/ContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_2"
            android:lineSpacingExtra="@dimen/s_5"
            android:text="@string/more_about_offline_bot_45" />

        <TextView
            android:id="@+id/id_detail_git_hub_tv"
            style="@style/ContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_2"
            android:lineSpacingExtra="@dimen/s_5"
            tools:text="@string/more_about_offline_bot_6" />
    </LinearLayout>


</ScrollView>