<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/s_10"
    android:background="@color/white_absolute"
    android:orientation="vertical"
    android:paddingStart="@dimen/s_20"
    android:paddingEnd="@dimen/s_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/id_user_name_tv"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_original_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/original_pwd" />

        <EditText
            android:id="@+id/id_original_pwd_et"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/hint_enter_origin_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/id_new_pwd_et"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/hint_enter_new_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_pwd" />

        <EditText
            android:id="@+id/id_new_pwd_again_et"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/hint_enter_new_pwd_again"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>