<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/s_10"
    android:background="@color/white_absolute"
    android:orientation="vertical"
    android:paddingStart="@dimen/s_20"
    android:paddingEnd="@dimen/s_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_user_name_et"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_account_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:theme="@style/InputEditTextBg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/FunctionPrompt9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_pwd_et"
            style="@style/InputContentSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_14"
            android:layout_weight="2"
            android:hint="@string/hint_enter_pwd"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:theme="@style/InputEditTextBg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_new_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/FunctionPrompt9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_pwd" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_new_pwd_et"
                style="@style/InputContentSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_14"
                android:layout_weight="2"
                android:hint="@string/hint_enter_new_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:theme="@style/InputEditTextBg" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/FunctionPrompt9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repeat_pwd" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_new_pwd_again_et"
                style="@style/InputContentSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_14"
                android:layout_weight="2"
                android:hint="@string/hint_enter_new_pwd_again"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:theme="@style/InputEditTextBg" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>